# kubernetes

./: .gitignore  create.sh  destroy.sh  pyproject.toml
apps/media/plex/: Chart.yaml  values.yaml
apps/media/plex/templates/: pv.yaml  pvc.yaml
apps/media/radarr/: Chart.yaml  requirements.yaml  values.yaml
apps/media/radarr/templates/: ingress.yaml  pv.yaml  pvc.yaml
apps/media/sonarr/: Chart.yaml  requirements.yaml  values.yaml
apps/media/sonarr/templates/: pv.yaml  pvc.yaml
bootstrapping/argo-cd/: install.yaml  mgmt-apps.yaml  values.yaml
bootstrapping/argo-cd/apps/: Chart.yaml
bootstrapping/argo-cd/apps/templates/: cert-manager.yaml
bootstrapping/argo-cd/clusters/mgmt/: Chart.yaml  values.yaml
bootstrapping/argo-cd/clusters/workload/: Chart.yaml  values-sonarr.yaml  values.yaml
bootstrapping/argo-cd/common-apps/: Chart.yaml  values-kong.yaml  values.yaml
bootstrapping/argo-cd/common-apps/kong/: Chart.yaml  ingress-controller.yaml  requirements.yaml
bootstrapping/argo-cd/mgmt-apps/: Chart.yaml  values.yaml
bootstrapping/argo-cd/mgmt-apps/templates/: cert-manager.yaml
bootstrapping/tf/: main.tf
infrastructure/cert-manager/: Chart.yaml  requirements.yaml
infrastructure/kong/templates/: plugins.yaml
infrastructure/vault/: Chart.yaml  values.yaml
infrastructure/vault/chart/: values.yaml
infrastructure/vault/chart/templates/: ingress.yaml
k3s/ansible/k3s-apps/: hosts.ini
k3s/ansible/k3s-mgmt/group_vars/: all.yml
k3s/ansible/taldev-k8s-mgmt/: hosts.ini
k3s/tf/: main.tf
tf-test/: main.tf
(+19 files in other folders)
