[tool.poetry]
name = "kubernetes"
version = "0.1.0"
description = ""
authors = ["Eirik W. Talberg <eirik@taldev.no>"]

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^6.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
